@@ -56,7 +56,9 @@ module AutoForme
       objs.each do |obj|
         html << "<tr>"
         columns.each do |column|
-          html << "<td>#{h model.column_value(type, request, obj, column)}</td>"
+          val = model.column_value(type, request, obj, column)
+          val = val.to_s('F') if defined?(BigDecimal) && val.is_a?(BigDecimal)
+          html << "<td>#{h val}</td>"
         end
         html << "<td><a href=\"#{action.url_for("show/#{model.primary_key_value(obj)}")}\" class=\"btn btn-mini btn-info\">Show</a></td>" if show
         html << "<td><a href=\"#{action.url_for("edit/#{model.primary_key_value(obj)}")}\" class=\"btn btn-mini btn-primary\">Edit</a></td>" if edit
